these changes are all meant to fix a CSS malfunction that appears randomly on random pages, and make them unusable. I have removed an omniface instruction, standardized and simplified the two css imports on every page, and changed the jakarta api in the pom to the web-api profile, not the general profile

--- a/src/main/webapp/gaze/results.xhtml
+++ b/src/main/webapp/gaze/results.xhtml
@@ -20,16 +20,13 @@
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
 
             <meta name="robots" content="noindex"/>
-
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
             <h:outputScript name="js/vivagraph.js" />
             <h:outputScript name="js/graph.js" />
         </h:head>
 
         <h:body>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
 
             <script type="text/javascript">
                 //<![CDATA[
