--- a/src/main/webapp/cowo/results.xhtml
+++ b/src/main/webapp/cowo/results.xhtml
@@ -20,16 +20,14 @@
             <meta name="theme-color" content="#ffffff"/>
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
 
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
             <meta name="robots" content="noindex"/>
             <h:outputScript name="js/vivagraph.js" />
             <h:outputScript name="js/graph.js" />
         </h:head>
 
         <h:body>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
+            <h:outputStylesheet name="css/primeflex.css"/>
+            <h:outputStylesheet name="css/custom.css" />
 
             <script type="text/javascript">
                 //<![CDATA[
@@ -54,8 +52,6 @@
             </p:dialog>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
-                <ui:include src="/WEB-INF/includes/sidebar.xhtml"/>
-
                 <h1>#{text['cowo.results.tagline']}</h1>
             </p:panel>
             <p:spacer height="20"/>
