--- a/src/main/webapp/gaze/network_builder_tool.xhtml
+++ b/src/main/webapp/gaze/network_builder_tool.xhtml
@@ -43,19 +43,16 @@
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
 
             <p:outputLabel value="#{sessionBean.noRobot}" escape="false" rendered="#{sessionBean.testServer}"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
-
         </h:head>
 
         <h:body>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
                 <f:viewParam name="lang" value="#{activeLocale.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
-            <p:panel>
+           <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml" />
                 <h1>#{text['gaze.network_builder.tagline']}</h1>
             </p:panel>
