--- a/src/main/webapp/import_your_data_network_builder_option_2.xhtml
+++ b/src/main/webapp/import_your_data_network_builder_option_2.xhtml
@@ -29,27 +29,21 @@
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
 
             <meta name="robots" content="noindex"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
         </h:head>
-
         <h:body>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml" />
-
-
                 <h1>#{text['general.message.upload_your_data']}</h1>
             </p:panel>
             <p:spacer height="20"/>
             <p:panel>
                 <div class="grid" >
                     <div class="col-12 md:9 lg:col-9">
-
                         <h:form enctype="multipart/form-data">
                             <h:graphicImage name="images/round_1_orange.png" width="20" height="20" style="vertical-align: bottom;"/>
                             <p:spacer width="5"/>
