--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -42,20 +42,16 @@
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
 
             <p:outputLabel value="#{sessionBean.noRobot}" escape="false" rendered="#{sessionBean.testServer}"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
-            <h:outputStylesheet name="css/custom.css" />
         </h:head>
-
         <h:body>
+            <h:outputStylesheet name="css/primeflex.css"/>
+            <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
                 <f:viewParam name="lang" value="#{activeLocale.languageTag}" />
                 <f:viewAction action="#{sessionBean.init()}" />
             </f:metadata>
-            <f:facet name="last">
-            </f:facet>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml" />
-
                 <div style="text-align: center; font-size: xx-large">🔎</div>
                 <h1 style="text-align: center">Nocode functions</h1>
                 <h3 style="text-align: center">#{text['index.tagline']}</h3>
