--- a/src/main/webapp/mapsofscience/maps_of_science.xhtml
+++ b/src/main/webapp/mapsofscience/maps_of_science.xhtml
@@ -7,17 +7,16 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:view locale="#{activeLocale.current}">
 
-        <h:head>        <!-- Primary Meta Tags -->
+        <h:head>
         </h:head>
 
         <h:body>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
                 <f:viewParam name="lang" value="#{activeLocale.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
                 <h1>IN PROGRESS - COME BACK OFTEN</h1>
