--- a/src/main/webapp/organic/results.xhtml
+++ b/src/main/webapp/organic/results.xhtml
@@ -18,17 +18,12 @@
             <meta name="msapplication-config" content="#{resource['images/favicons/browserconfig.xml']}"/>
             <meta name="theme-color" content="#ffffff"/>
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
-
-
             <meta name="robots" content="noindex"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
-
+            <h:outputStylesheet name="css/primeflex.css"/>
         </h:head>
-
         <h:body>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
 
             <script type="text/javascript">
                 //<![CDATA[
