--- a/src/main/webapp/pdfmatcher/pdf_matcher_tool.xhtml
+++ b/src/main/webapp/pdfmatcher/pdf_matcher_tool.xhtml
@@ -7,7 +7,7 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:view locale="#{activeLocale.current}">
 
-        <h:head>        <!-- Primary Meta Tags -->
+        <h:head>
             <title>#{text['pdfmatcher.tool.title']}</title>
             <meta name="description" content="#{text['pdfmatcher.tool.description']}"/>
             <meta http-equiv="content-language" content="en-us"/>
@@ -42,18 +42,14 @@
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
 
             <p:outputLabel value="#{sessionBean.noRobot}" escape="false" rendered="#{sessionBean.testServer}"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
-
         </h:head>
-
         <h:body>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
                 <f:viewParam name="lang" value="#{activeLocale.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
                 <h1>#{text['pdfmatcher.tool.tagline']}</h1>
