--- a/src/main/webapp/spatialize/spatialize_network.xhtml
+++ b/src/main/webapp/spatialize/spatialize_network.xhtml
@@ -42,17 +42,14 @@
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
 
             <p:outputLabel value="#{sessionBean.noRobot}" escape="false" rendered="#{sessionBean.testServer}"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
         </h:head>
-
         <h:body>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
                 <f:viewParam name="lang" value="#{activeLocale.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
             <script type="text/javascript">
                 //<![CDATA[
                 function start() {
@@ -64,6 +61,10 @@
                 }
                 //]]>
             </script>
+            <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false"
+                      resizable="false">
+                <i class="pi pi-spinner pi-spin" style="font-size:3rem"></i>
+            </p:dialog>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
                 <h1>#{text['spatialize.title']}</h1>
@@ -149,8 +150,13 @@
                     <div>
                         <p:spacer height="10" width="10"/>            
                     </div>
-                    <p:commandButton id="download" value="#{text['general.message.download_gexf']}" ajax="false"
-                                     icon="pi pi-arrow-down" styleClass="p-mr-2" rendered="#{spatializeBean.displayDownloadButton}">
+                    <p:commandButton id="download"
+                                     value="#{text['general.message.download_gexf']}"
+                                     ajax="false"
+                                     icon="pi pi-arrow-down"
+                                     styleClass="p-mr-2"
+                                     onclick="PrimeFaces.monitorDownload(start, stop);"
+                                     rendered="#{spatializeBean.displayDownloadButton}">
                         <p:fileDownload value="#{spatializeBean.fileToSave}"/>
                     </p:commandButton>
                 </p:panel>
