--- a/src/main/webapp/topics/results.xhtml
+++ b/src/main/webapp/topics/results.xhtml
@@ -19,17 +19,11 @@
             <meta name="msapplication-config" content="#{resource['images/favicons/browserconfig.xml']}"/>
             <meta name="theme-color" content="#ffffff"/>
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
-
-
             <meta name="robots" content="noindex"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
         </h:head>
-
         <h:body>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
-
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
             <script type="text/javascript">
                 //<![CDATA[
                 function start() {
@@ -47,15 +41,17 @@
             </p:dialog>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
-                <ui:include src="/WEB-INF/includes/sidebar.xhtml"/>
-
                 <h1>#{text['topics.topics_extraction_tool.tagline']}</h1>
             </p:panel>
             <p:spacer height="20"/>
             <p:panel header="">
                 <h:form target="_blank">
-                    <p:commandButton value="#{text['general.verbs.download_results']}" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);"
-                                     icon="pi pi-arrow-down" styleClass="p-mr-2">
+                    <p:commandButton
+                        value="#{text['general.verbs.download_results']}"
+                        ajax="false"
+                        onclick="PrimeFaces.monitorDownload(start, stop);"
+                        icon="pi pi-arrow-down"
+                        styleClass="p-mr-2">
                         <p:fileDownload value="#{topicsBean.excelFileToSave}"/>
                     </p:commandButton>
                     <br/>
