--- a/src/main/webapp/umigon/results.xhtml
+++ b/src/main/webapp/umigon/results.xhtml
@@ -25,23 +25,30 @@
             <meta name="msapplication-config" content="#{resource['images/favicons/browserconfig.xml']}"/>
             <meta name="theme-color" content="#ffffff"/>
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
-
             <meta name="robots" content="noindex"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
         </h:head>
-
         <h:body>
-            <f:facet name="last">
-                <h:outputStylesheet name="css/custom.css" />
-            </f:facet>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
+
+            <script type="text/javascript">
+                //<![CDATA[
+                function start() {
+                    PF('statusDialog').show();
+                }
+
+                function stop() {
+                    PF('statusDialog').hide();
+                }
+                //]]>
+            </script>
+
             <p:dialog modal="true" widgetVar="statusDialog" header="#{text['general.message.wait_and_authorize_popup']}" draggable="false" closable="false"
                       resizable="false">
                 <i class="pi pi-spinner pi-spin" style="font-size:3rem"></i>
             </p:dialog>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
-                <ui:include src="/WEB-INF/includes/sidebar.xhtml"/>
-
                 <h1>#{text['umigon.results.tagline']}</h1>
             </p:panel>
             <p:spacer height="20"/>
