--- a/src/main/webapp/who.xhtml
+++ b/src/main/webapp/who.xhtml
@@ -41,19 +41,16 @@
             <meta name="msapplication-config" content="#{resource['images/favicons/browserconfig.xml']}"/>
             <meta name="theme-color" content="#ffffff"/>
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
-
             <p:outputLabel value="#{sessionBean.noRobot}" escape="false" rendered="#{sessionBean.testServer}"/>
-            <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.css"/>
-            <h:outputStylesheet name="css/custom.css" />
         </h:head>
-
         <h:body>
+            <h:outputStylesheet name="css/primeflex.css" />
+            <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
                 <f:viewParam name="lang" value="#{activeLocale.languageTag}" />
             </f:metadata>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml" />
-
 
                 <div style="text-align: center; font-size: xx-large">👋</div>
                 <h1 style="text-align: center">#{text['who.tagline']}</h1>
